--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,16 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/src/app.ts" }] }
+{
+    "version": 2,
+    "builds": [
+        {
+            "src": "src/app.ts",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "src/app.ts"
+        }
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "/src/app.ts" }]
+}
