--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "backend-theinventory",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "20"
+  },
   "scripts": {
-    "dev": "tsx watch src/app.ts"
+    "dev": "tsx watch src/app.ts",
+    "build": "tsup src ",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +29,7 @@
     "express-async-errors": "^3.1.1",
     "firebase-admin": "^13.0.1",
     "jsonwebtoken": "^9.0.2",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "tsup": "^8.3.5"
   }
 }
