--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@types/cors": "^2.8.17",
     "@types/node": "^22.10.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "@prisma/client": "^6.0.1"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.1",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
