--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "node": "20"
   },
   "scripts": {
+    "generate": "npx prisma generate",
+    "deploy": "npx prisma migrate deploy",
     "dev": "tsx watch src/app.ts",
-    "build": "tsup src",
-    "start": "node dist/app.js"
+    "build": "tsup src && npm run generate",
+    "start": "npm run build && node dist/app.js"
   },
   "keywords": [],
   "author": "",
